syntax = "proto3";
package default;

service DefaultService {
    rpc GetDefault(GetDefaultRequest) returns (GetDefaultResponse);
    rpc GetDefault2(GetDefaultRequest) returns (GetDefaultResponse);
    rpc GetDefault3(GetDefaultRequest) returns (GetDefaultResponse);
}

message GetDefaultRequest {
    int32 id = 1;
}

message GetDefaultResponse {
    int32 id = 1;
    string message = 2;
}
